[package]
name = "rcli"
version = "0.1.0"
author = "Vilen Wang <rcrwhyg@sina.com>"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
base64 = "0.22.1"
blake3 = "1.5.4"
chacha20poly1305 = "0.10.1"
clap = { version = "4.5.16", features = ["derive"] }
csv = "1.3.0"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
enum_dispatch = "0.3.13"
futures = "0.3.30"
rand = "0.8.5"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
serde_yaml = "0.9.33"
tokio = { version = "1.39.3", features = [
    "rt",
    "rt-multi-thread",
    "macros",
    "net",
    "fs",
] }
tower-http = { version = "0.5.2", features = [
    "compression-full",
    "cors",
    "trace",
    "fs",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.14", features = ["env-filter"] }
url = "2.5.2"
zxcvbn = "3.1.0"
